Storefront+Cart: Substantially improve the cart experience.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,6 +58,7 @@
         "autofocus",
         "Bergsgatan",
         "colord",
+        "compat",
         "Dahlqvist",
         "Deca",
         "ecommerce",
@@ -76,7 +77,9 @@
         "nextjs",
         "Nordcom",
         "Nordstar",
+        "nprogress",
         "nums",
+        "overscroll",
         "Preloadable",
         "prismic",
         "Prismic",
