--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -62,6 +62,7 @@
         "Dahlqvist",
         "Deca",
         "ecommerce",
+        "Etags",
         "Filiph",
         "filiphsandstrom",
         "googlebot",
