Cart: Slightly imrpove the design of child components.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -98,7 +98,8 @@
         "typecheck",
         "Västra",
         "Vercel",
-        "webp"
+        "webp",
+        "Woohoo"
     ],
     "markdownlint.config": {
         "single-title": false,
