Admin: Add placeholder settings pages.

--- a/.env.example
+++ b/.env.example
@@ -25,7 +25,7 @@ GITHUB_TOKEN=
 # Analytics & Error Reporting. =======================================================
 NEXT_PUBLIC_HIGHLIGHT_PROJECT_ID=
 HIGHLIGHT_SOURCEMAP_UPLOAD_API_KEY=
-
+GTM=
 
 # Depreciated, will be replaced with an API call. ====================================
 SHOPIFY_TOKEN=
