Prisma: Enable `accelerate` extension.
This allows us to use Prisma on the edge, which is a huge performance
boost.

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@
 # ====================================================================================
 
 # Database. ==========================================================================
+POSTGRES_PRISMA_ACCELERATE_URL=
 POSTGRES_PRISMA_URL=
 POSTGRES_URL_NON_POOLING=
 
