--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,10 +11,10 @@
     "prettier": "@nordcom/prettier",
     "scripts": {
         "start": "next start -p $PORT",
-        "predev": "prisma generate --schema=../../prisma/schema.prisma > /dev/null",
+        "predev": "prisma generate --no-engine --schema=../../prisma/schema.prisma > /dev/null",
         "dev": "next dev",
         "dev:turbo": "next dev --turbo",
-        "prebuild": "prisma generate --schema=../../prisma/schema.prisma > /dev/null",
+        "prebuild": "prisma generate --no-engine --schema=../../prisma/schema.prisma > /dev/null",
         "build": "next build",
         "lint": "next lint",
         "fix:lint": "next lint --fix",
@@ -64,6 +64,7 @@
         "@next/third-parties": "14.0.4",
         "@nordcom/nordstar": "0.0.26",
         "@prisma/client": "5.7.1",
+        "@prisma/extension-accelerate": "0.6.2",
         "@prismicio/client": "7.3.1",
         "@prismicio/next": "1.5.0",
         "@prismicio/react": "2.7.3",
