Admin: Add `h2` headings.

--- a/.hintrc
+++ b/.hintrc
@@ -20,7 +20,8 @@
                     "scrollbar-width",
                     "scrollbar-color",
                     "text-underline-position",
-                    "contain-intrinsic-size"
+                    "contain-intrinsic-size",
+                    "backdrop-filter"
                 ]
             }
         ]
