--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -86,6 +86,7 @@
         "next-seo": "6.4.0",
         "next-sitemap": "4.2.3",
         "nextjs-toploader": "1.6.4",
+        "png-to-ico": "2.1.8",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-icons": "4.12.0",
