--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -69,6 +69,7 @@
         "@prismicio/next": "1.5.0",
         "@prismicio/react": "2.7.3",
         "@shopify/hydrogen-react": "2023.10.1",
+        "@shopify/shopify-api": "8.1.1",
         "@vercel/analytics": "1.1.1",
         "@vercel/kv": "1.0.1",
         "@vercel/otel": "0.3.0",
