CI: Add missing env vars.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,8 @@ env:
     TURBO_TEAM: ${{ vars.TURBO_TEAM }}
     POSTGRES_PRISMA_ACCELERATE_URL: ${{ secrets.POSTGRES_PRISMA_ACCELERATE_URL }}
     POSTGRES_PRISMA_URL: ${{ secrets.POSTGRES_PRISMA_URL}}
+    SHOPIFY_API_KEY: ${{ secrets.SHOPIFY_API_KEY }}
+    SHOPIFY_API_SECRET_KEY: ${{ secrets.SHOPIFY_API_SECRET_KEY }}
 
 jobs:
     build:
