--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,8 @@ env:
     VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
     POSTGRES_PRISMA_ACCELERATE_URL: ${{ secrets.POSTGRES_PRISMA_ACCELERATE_URL }}
     POSTGRES_PRISMA_URL: ${{ secrets.POSTGRES_PRISMA_URL}}
+    SHOPIFY_API_KEY: ${{ secrets.SHOPIFY_API_KEY }}
+    SHOPIFY_API_SECRET_KEY: ${{ secrets.SHOPIFY_API_SECRET_KEY }}
 
 jobs:
     vercel:
