--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,6 +1,6 @@
 {
     "$schema": "https://json.schemastore.org/package.json",
-    "name": "@nordcom/ecommerce-frontend",
+    "name": "@nordcom/commerce-web",
     "version": "2.0.0",
     "private": true,
     "sideEffects": false,
@@ -47,7 +47,7 @@
     "bugs": {
         "url": "https://github.com/NordcomInc/sweetsideofsweden-frontend/issues"
     },
-    "homepage": "https://www.sweetsideofsweden.com/",
+    "homepage": "https://shops.nordcom.io/",
     "browserslist": [
         ">0.5%",
         "defaults",
@@ -62,6 +62,7 @@
         "@markdoc/next.js": "0.3.7",
         "@next-auth/prisma-adapter": "1.0.7",
         "@next/third-parties": "14.0.4",
+        "@nordcom/commerce-database": "0.0.0",
         "@nordcom/nordstar": "0.0.33",
         "@prisma/client": "5.8.0",
         "@prisma/extension-accelerate": "0.6.2",
