Admin: Start refactor of project structure.
The goal of this refactor is to split the admin dashboard from the
storefront and marketing site.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -75,6 +75,7 @@
         "metafield",
         "metafields",
         "myshopify",
+        "nextauth",
         "nextjs",
         "Nordcom",
         "Nordstar",
