--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -1,6 +1,6 @@
 {
     "$schema": "https://json.schemastore.org/package.json",
-    "name": "@nordcom/commerce-storefront",
+    "name": "@nordcom/commerce-admin",
     "version": "2.0.0",
     "private": true,
     "sideEffects": false,
@@ -11,10 +11,8 @@
     "prettier": "@nordcom/prettier",
     "scripts": {
         "start": "next start -p $PORT",
-        "predev": "prisma generate --no-engine --schema=../../prisma/schema.prisma > /dev/null",
         "dev": "next dev",
         "dev:turbo": "next dev --turbo",
-        "prebuild": "prisma generate --no-engine --schema=../../prisma/schema.prisma > /dev/null",
         "build": "next build",
         "lint": "next lint",
         "fix:lint": "next lint --fix",
@@ -38,14 +36,14 @@
     ],
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/NordcomInc/sweetsideofsweden-frontend.git"
+        "url": "git+https://github.com/NordcomInc/commerce.git"
     },
     "keywords": [
         "nextjs",
         "react"
     ],
     "bugs": {
-        "url": "https://github.com/NordcomInc/sweetsideofsweden-frontend/issues"
+        "url": "https://github.com/NordcomInc/commerce/issues"
     },
     "homepage": "https://shops.nordcom.io/",
     "browserslist": [
@@ -55,60 +53,36 @@
         "supports css-grid"
     ],
     "dependencies": {
-        "@apollo/client": "3.8.8",
-        "@apollo/experimental-nextjs-app-support": "0.6.0",
-        "@highlight-run/next": "7.3.2",
-        "@markdoc/markdoc": "0.4.0",
-        "@markdoc/next.js": "0.3.7",
         "@next-auth/prisma-adapter": "1.0.7",
         "@next/third-parties": "14.0.4",
         "@nordcom/commerce-database": "0.0.0",
         "@nordcom/nordstar": "0.0.33",
         "@prisma/client": "5.8.0",
         "@prisma/extension-accelerate": "0.6.2",
-        "@prismicio/client": "7.3.1",
-        "@prismicio/next": "1.5.0",
-        "@prismicio/react": "2.7.3",
-        "@shopify/hydrogen-react": "2023.10.1",
         "@shopify/shopify-api": "8.1.1",
-        "@vercel/analytics": "1.1.1",
         "@vercel/otel": "0.3.0",
-        "@vercel/speed-insights": "1.0.2",
-        "accept-language-parser": "1.5.0",
         "colord": "2.9.3",
-        "convert-units": "2.3.4",
         "geist": "1.2.0",
-        "glob": "10.3.10",
-        "gravatar.js": "2.0.0",
-        "gray-matter": "4.0.3",
         "next": "14.0.4",
         "next-auth": "4.24.5",
         "next-seo": "6.4.0",
-        "next-sitemap": "4.2.3",
         "nextjs-toploader": "1.6.4",
-        "png-to-ico": "2.1.8",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-icons": "4.12.0",
-        "react-lottie-player": "1.5.5",
         "sass": "1.69.7",
         "sharp": "0.33.1",
-        "sonner": "1.3.1",
-        "the-new-css-reset": "1.11.2"
+        "sonner": "1.3.1"
     },
     "devDependencies": {
         "@nordcom/prettier": "0.1.1",
-        "@slicemachine/adapter-next": "0.3.31",
-        "@types/accept-language-parser": "1.5.6",
-        "@types/convert-units": "2.3.9",
         "concurrently": "8.2.2",
         "critters": "0.0.20",
-        "eslint-config-next": "14.0.4",
         "eslint": "8.56.0",
+        "eslint-config-next": "14.0.4",
         "graphql": "16.8.1",
         "happy-dom": "12.10.3",
         "server-only": "0.0.1",
-        "slice-machine-ui": "1.22.1",
         "typescript": "5.3.3"
     }
 }
