Admin: Add stub Clerk.com authentication.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -101,6 +101,7 @@
         "thirdparties",
         "timeframes",
         "toploader",
+        "trpc",
         "typecheck",
         "Västra",
         "Vercel",
