--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -11,8 +11,7 @@
     "prettier": "@nordcom/prettier",
     "scripts": {
         "start": "next start -p $PORT",
-        "dev": "next dev",
-        "dev:turbo": "next dev --turbo",
+        "dev": "next dev --turbo",
         "build": "next build",
         "lint": "next lint",
         "fix:lint": "next lint --fix",
@@ -46,25 +45,19 @@
         "url": "https://github.com/NordcomInc/commerce/issues"
     },
     "homepage": "https://shops.nordcom.io/admin/",
-    "browserslist": [
-        ">0.5%",
-        "defaults",
-        "supports es6-module",
-        "supports css-grid"
-    ],
     "dependencies": {
         "@next-auth/prisma-adapter": "1.0.7",
-        "@next/third-parties": "14.0.4",
+        "@next/third-parties": "14.1.0",
         "@nordcom/commerce-database": "*",
         "@nordcom/commerce-errors": "*",
-        "@nordcom/nordstar": "0.0.37",
+        "@nordcom/nordstar": "0.0.38",
         "@prisma/client": "5.8.1",
         "@prisma/extension-accelerate": "0.6.2",
         "@shopify/shopify-api": "9.0.2",
         "@vercel/otel": "0.3.0",
         "colord": "2.9.3",
         "geist": "1.2.1",
-        "next": "14.0.4",
+        "next": "14.1.0",
         "next-auth": "4.24.5",
         "next-seo": "6.4.0",
         "nextjs-toploader": "1.6.4",
@@ -83,7 +76,7 @@
         "@types/react": "18.2.48",
         "concurrently": "8.2.2",
         "critters": "0.0.20",
-        "eslint-config-next": "14.0.4",
+        "eslint-config-next": "14.1.0",
         "eslint": "8.56.0",
         "graphql": "16.8.1",
         "happy-dom": "13.2.0",
