--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -11,8 +11,7 @@
     "prettier": "@nordcom/prettier",
     "scripts": {
         "start": "next start -p $PORT",
-        "dev": "next dev",
-        "dev:turbo": "next dev --turbo",
+        "dev": "next dev --turbo",
         "build": "next build",
         "lint": "next lint",
         "fix:lint": "next lint --fix",
@@ -46,20 +45,14 @@
         "url": "https://github.com/NordcomInc/commerce/issues"
     },
     "homepage": "https://shops.nordcom.io/",
-    "browserslist": [
-        ">0.5%",
-        "defaults",
-        "supports es6-module",
-        "supports css-grid"
-    ],
     "dependencies": {
-        "@next/third-parties": "14.0.4",
+        "@next/third-parties": "14.1.0",
         "@nordcom/commerce-errors": "*",
-        "@nordcom/nordstar": "0.0.37",
+        "@nordcom/nordstar": "0.0.38",
         "@vercel/otel": "0.3.0",
         "colord": "2.9.3",
         "geist": "1.2.1",
-        "next": "14.0.4",
+        "next": "14.1.0",
         "next-seo": "6.4.0",
         "nextjs-toploader": "1.6.4",
         "react": "18.2.0",
@@ -82,7 +75,7 @@
         "@types/react": "18.2.48",
         "concurrently": "8.2.2",
         "critters": "0.0.20",
-        "eslint-config-next": "14.0.4",
+        "eslint-config-next": "14.1.0",
         "eslint": "8.56.0",
         "graphql": "16.8.1",
         "happy-dom": "13.2.0",
