Storefront: Remove legacy prefetch utility and fix various issues.
Additionally this removes some unused Prismic functionality as we are
most likely going to migrate away from them and roll our own as a part
of Nordcom Commerce!

--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -11,14 +11,13 @@
     "prettier": "@nordcom/prettier",
     "scripts": {
         "start": "next start -p $PORT",
-        "dev": "next dev --turbo",
+        "dev": "next dev",
         "build": "next build",
         "lint": "next lint",
         "fix:lint": "next lint --fix",
         "fix": "concurrently npm:fix:*",
         "typecheck": "tsc -noEmit",
         "test": "vitest run --coverage",
-        "slicemachine": "start-slicemachine",
         "watch:test": "vitest watch"
     },
     "author": {
