--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,7 +11,7 @@
     "prettier": "@nordcom/prettier",
     "scripts": {
         "start": "next start -p $PORT",
-        "dev": "next dev --turbo",
+        "dev": "next dev",
         "build": "next build",
         "lint": "next lint",
         "fix:lint": "next lint --fix",
