Storefront: Update hardcoded address.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -91,6 +91,7 @@
         "prismicio",
         "registrator",
         "renderable",
+        "Sädesbingen",
         "Sahlin",
         "Sandström",
         "Siitam",
@@ -101,6 +102,7 @@
         "thirdparties",
         "timeframes",
         "toploader",
+        "Trollhättan",
         "typecheck",
         "Västra",
         "Vercel",
