--- a/packages/database/tsconfig.json
+++ b/packages/database/tsconfig.json
@@ -8,7 +8,8 @@
         "lib": ["ESNext"],
         "rootDir": ".",
         "paths": {},
-        "noEmit": false
+        "noEmit": false,
+        "removeComments": false
     },
     "include": ["src/@types", "src"]
 }
