--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -45,6 +45,7 @@
     },
     "homepage": "https://shops.nordcom.io/admin/",
     "dependencies": {
+        "@million/lint": "0.0.66",
         "@next-auth/prisma-adapter": "1.0.7",
         "@next/third-parties": "14.1.3",
         "@nordcom/commerce-database": "*",
@@ -56,13 +57,14 @@
         "@vercel/otel": "1.5.0",
         "colord": "2.9.3",
         "geist": "1.2.2",
-        "next": "14.1.3",
+        "million": "3.0.5",
         "next-auth": "4.24.7",
         "next-seo": "6.5.0",
+        "next": "14.1.3",
         "nextjs-toploader": "1.6.6",
-        "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-icons": "5.0.1",
+        "react": "18.2.0",
         "sass": "1.71.1",
         "sharp": "0.33.2",
         "sonner": "1.4.3"
