--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -45,23 +45,25 @@
     },
     "homepage": "https://shops.nordcom.io/",
     "dependencies": {
+        "@markdoc/markdoc": "0.4.0",
+        "@markdoc/next.js": "0.3.7",
+        "@million/lint": "0.0.66",
         "@next/third-parties": "14.1.3",
         "@nordcom/commerce-errors": "*",
         "@nordcom/nordstar": "0.0.41",
         "@vercel/otel": "1.5.0",
         "colord": "2.9.3",
         "geist": "1.2.2",
-        "next": "14.1.3",
+        "glob": "10.3.10",
+        "gravatar.js": "2.0.0",
+        "gray-matter": "4.0.3",
+        "million": "3.0.5",
         "next-seo": "6.5.0",
+        "next": "14.1.3",
         "nextjs-toploader": "1.6.6",
-        "react": "18.2.0",
-        "@markdoc/markdoc": "0.4.0",
-        "@markdoc/next.js": "0.3.7",
         "react-dom": "18.2.0",
         "react-icons": "5.0.1",
-        "gray-matter": "4.0.3",
-        "gravatar.js": "2.0.0",
-        "glob": "10.3.10",
+        "react": "18.2.0",
         "sass": "1.71.1",
         "sharp": "0.33.2",
         "sonner": "1.4.3"
