--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -48,6 +48,7 @@
     "dependencies": {
         "@apollo/client": "3.9.6",
         "@apollo/experimental-nextjs-app-support": "0.8.0",
+        "@million/lint": "0.0.66",
         "@next/third-parties": "14.1.3",
         "@nordcom/commerce-database": "*",
         "@nordcom/commerce-errors": "*",
@@ -65,6 +66,8 @@
         "convert-units": "2.3.4",
         "geist": "1.2.2",
         "gravatar.js": "2.0.0",
+        "lodash.debounce": "4.0.8",
+        "million": "3.0.5",
         "next": "14.1.3",
         "next-auth": "4.24.7",
         "next-seo": "6.5.0",
@@ -78,7 +81,8 @@
         "sass": "1.71.1",
         "sharp": "0.33.2",
         "sonner": "1.4.3",
-        "the-new-css-reset": "1.11.2"
+        "the-new-css-reset": "1.11.2",
+        "use-context-selector": "1.4.3"
     },
     "devDependencies": {
         "@happy-dom/global-registrator": "13.2.1",
@@ -87,12 +91,13 @@
         "@testing-library/react": "14.2.1",
         "@types/accept-language-parser": "1.5.6",
         "@types/convert-units": "2.3.9",
-        "@types/react-dom": "18.2.21",
+        "@types/lodash.debounce": "4.0.9",
         "@types/react": "18.2.64",
+        "@types/react-dom": "18.2.21",
         "concurrently": "8.2.2",
-        "critters": "0.0.22",
-        "eslint-config-next": "14.1.3",
+        "critters": "0.0.21",
         "eslint": "8.57.0",
+        "eslint-config-next": "14.1.3",
         "graphql": "16.8.1",
         "happy-dom": "13.7.0",
         "server-only": "0.0.1",
