Meta: Fix a bunch of cross-platform issues.

--- a/.env.example
+++ b/.env.example
@@ -22,11 +22,5 @@ AUTH_TRUST_HOST=true
 # Services. ==========================================================================
 GITHUB_ID=
 GITHUB_TOKEN=
-
-# Analytics & Error Reporting. =======================================================
-GTM=
-
-# Depreciated, will be replaced with an API call. ====================================
-SHOPIFY_TOKEN=
-SHOPIFY_PRIVATE_TOKEN=
-SHOPIFY_STOREFRONT_ID=
+SHOPIFY_API_KEY=
+SHOPIFY_API_SECRET_KEY=
