--- a/package.json
+++ b/package.json
@@ -15,13 +15,11 @@
     "prettier": "@nordcom/prettier",
     "scripts": {
         "prepare": "husky install",
-        "postinstall": "prisma generate --no-engine > /dev/null",
-        "start": "turbo run start",
-        "predev": "prisma generate --no-engine  > /dev/null",
-        "dev": "turbo run dev",
-        "build:vercel": "prisma migrate deploy",
-        "prebuild": "prisma generate --no-engine  > /dev/null",
-        "build": "turbo run build",
+        "postinstall": "prisma generate --no-engine",
+        "predev": "prisma generate --no-engine",
+        "dev": "dotenv -c -- turbo run dev",
+        "prebuild": "prisma generate --no-engine",
+        "build": "dotenv -c -- turbo run build",
         "build:packages": "turbo run build --filter='./packages/*'",
         "lint": "turbo run lint",
         "prettier": "prettier **/src/**/*.{ts,tsx,scss} --check",
@@ -61,12 +59,14 @@
     ],
     "devDependencies": {
         "@nordcom/prettier": "0.1.1",
+        "@prisma/client": "5.10.2",
         "@typescript-eslint/eslint-plugin": "7.1.1",
         "@typescript-eslint/parser": "7.1.1",
         "@vitejs/plugin-react": "4.2.1",
         "@vitest/coverage-v8": "1.3.1",
         "babel-plugin-module-resolver": "5.0.0",
         "concurrently": "8.2.2",
+        "dotenv-cli": "7.4.0",
         "eslint": "8.57.0",
         "eslint-config-prettier": "9.1.0",
         "eslint-plugin-import": "2.29.1",
