--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -75,6 +75,7 @@
         "@testing-library/react": "14.2.1",
         "@types/react-dom": "18.2.21",
         "@types/react": "18.2.64",
+        "@types/nprogress": "0.2.3",
         "concurrently": "8.2.2",
         "critters": "0.0.22",
         "eslint-config-next": "14.1.3",
