--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -52,6 +52,7 @@
         "@next/third-parties": "14.1.3",
         "@nordcom/commerce-database": "*",
         "@nordcom/commerce-errors": "*",
+        "@nordcom/nordstar": "0.0.41",
         "@prisma/client": "5.10.2",
         "@prisma/extension-accelerate": "1.0.0",
         "@prismicio/client": "7.3.1",
@@ -65,6 +66,7 @@
         "colord": "2.9.3",
         "convert-units": "2.3.4",
         "geist": "1.2.2",
+        "graphql-tag": "2.12.6",
         "gravatar.js": "2.0.0",
         "lodash.debounce": "4.0.8",
         "million": "3.0.6",
@@ -94,6 +96,7 @@
         "@types/lodash.debounce": "4.0.9",
         "@types/react": "18.2.64",
         "@types/react-dom": "18.2.21",
+        "@types/nprogress": "0.2.3",
         "concurrently": "8.2.2",
         "critters": "0.0.21",
         "eslint": "8.57.0",
