Meta: Let vercel deal with the redirects.

--- a/apps/landing/vercel.json
+++ b/apps/landing/vercel.json
@@ -8,5 +8,9 @@
     "github": {
         "enabled": true,
         "autoJobCancelation": true
-    }
+    },
+    "rewrites": [
+        { "source": "/admin/:path*", "destination": "https://nordcom-commerce-admin.vercel.app/admin/:path*" },
+        { "source": "/(.*)", "destination": "/" }
+    ]
 }
