--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -81,6 +81,7 @@
         "eslint": "8.57.0",
         "graphql": "16.8.1",
         "happy-dom": "13.7.0",
+        "prettier": "3.2.5",
         "server-only": "0.0.1",
         "typescript": "5.4.2",
         "vitest": "1.3.1"
