--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -99,10 +99,11 @@
         "@types/nprogress": "0.2.3",
         "concurrently": "8.2.2",
         "critters": "0.0.21",
-        "eslint": "8.57.0",
         "eslint-config-next": "14.1.3",
+        "eslint": "8.57.0",
         "graphql": "16.8.1",
         "happy-dom": "13.7.0",
+        "prettier": "3.2.5",
         "server-only": "0.0.1",
         "slice-machine-ui": "1.24.1",
         "typescript": "5.4.2",
