--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     ],
     "prettier": "@nordcom/prettier",
     "scripts": {
-        "prepare": "husky install",
+        "prepare": "husky",
         "postinstall": "prisma generate --no-engine",
         "predev": "prisma generate --no-engine",
         "dev": "dotenv -c -- turbo run dev",
