--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "version": "2.0.0",
     "private": true,
     "type": "module",
+    "packageManager": "bun@1.0.30",
     "engines": {
-        "npm": ">=8",
         "node": ">=18 <=21"
     },
     "cacheDirectories": [
