--- a/.github/common/bootstrap/action.yml
+++ b/.github/common/bootstrap/action.yml
@@ -9,11 +9,13 @@ runs:
           with:
               node-version-file: '.nvmrc'
               registry-url: 'https://registry.npmjs.org'
-              cache: 'npm'
+
+        - name: 🏎️ Setup Bun
+          uses: oven-sh/setup-bun@v1
 
         - name: 📦 Install dependencies
           shell: bash
-          run: npm ci
+          run: bun install
 
         - name: 💾 Cache node modules
           uses: actions/cache@v4
