--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -15,7 +15,7 @@
         "build": "next build",
         "lint": "next lint",
         "fix:lint": "next lint --fix",
-        "fix": "concurrently npm:fix:*",
+        "fix": "concurrently bun:fix:*",
         "typecheck": "tsc -noEmit",
         "test": "vitest run --coverage",
         "watch:test": "vitest watch"
@@ -48,8 +48,8 @@
         "@million/lint": "0.0.68",
         "@next-auth/prisma-adapter": "1.0.7",
         "@next/third-parties": "14.1.3",
-        "@nordcom/commerce-database": "*",
-        "@nordcom/commerce-errors": "*",
+        "@nordcom/commerce-database": "workspace:*",
+        "@nordcom/commerce-errors": "workspace:*",
         "@nordcom/nordstar": "0.0.41",
         "@prisma/client": "5.10.2",
         "@prisma/extension-accelerate": "1.0.0",
