--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -15,7 +15,7 @@
         "build": "next build",
         "lint": "next lint",
         "fix:lint": "next lint --fix",
-        "fix": "concurrently npm:fix:*",
+        "fix": "concurrently bun:fix:*",
         "typecheck": "tsc -noEmit",
         "test": "vitest run --coverage",
         "watch:test": "vitest watch"
@@ -49,7 +49,7 @@
         "@markdoc/next.js": "0.3.7",
         "@million/lint": "0.0.68",
         "@next/third-parties": "14.1.3",
-        "@nordcom/commerce-errors": "*",
+        "@nordcom/commerce-errors": "workspace:*",
         "@nordcom/nordstar": "0.0.41",
         "@vercel/otel": "1.5.0",
         "colord": "2.9.3",
