--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,7 +15,7 @@
         "build": "next build",
         "lint": "next lint",
         "fix:lint": "next lint --fix",
-        "fix": "concurrently npm:fix:*",
+        "fix": "concurrently bun:fix:*",
         "typecheck": "tsc -noEmit",
         "test": "vitest run --coverage",
         "slicemachine": "start-slicemachine",
@@ -50,8 +50,8 @@
         "@apollo/experimental-nextjs-app-support": "0.8.0",
         "@million/lint": "0.0.68",
         "@next/third-parties": "14.1.3",
-        "@nordcom/commerce-database": "*",
-        "@nordcom/commerce-errors": "*",
+        "@nordcom/commerce-database": "workspace:*",
+        "@nordcom/commerce-errors": "workspace:*",
         "@nordcom/nordstar": "0.0.41",
         "@prisma/client": "5.10.2",
         "@prisma/extension-accelerate": "1.0.0",
