--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -50,6 +50,7 @@
         "@next/third-parties": "14.1.3",
         "@nordcom/commerce-database": "workspace:*",
         "@nordcom/commerce-errors": "workspace:*",
+        "@nordcom/commerce-marketing-common": "workspace:*",
         "@nordcom/nordstar": "0.0.41",
         "@prisma/client": "5.10.2",
         "@prisma/extension-accelerate": "1.0.0",
