--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -35,14 +35,14 @@
     ],
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/NordcomInc/sweetsideofsweden-frontend.git"
+        "url": "git+https://github.com/NordcomInc/commerce.git"
     },
     "keywords": [
         "nextjs",
         "react"
     ],
     "bugs": {
-        "url": "https://github.com/NordcomInc/sweetsideofsweden-frontend/issues"
+        "url": "https://github.com/NordcomInc/commerce/issues"
     },
     "homepage": "https://shops.nordcom.io/",
     "dependencies": {
